# niku

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md  TODO.md  flake.nix  workspace.code-workspace
projects/android/: settings.gradle
projects/android/app/: build.gradle
projects/android/app/src/androidTest/java/app/niku/android/: ExampleInstrumentedTest.kt
projects/android/app/src/main/: AndroidManifest.xml
projects/android/app/src/main/java/app/niku/android/: MainActivity.kt
projects/android/app/src/main/java/app/niku/android/ui/theme/: Color.kt  Theme.kt  Type.kt
projects/android/app/src/main/res/values/: strings.xml  themes.xml
projects/android/app/src/test/java/app/niku/android/: ExampleUnitTest.kt
projects/android/gradle/: libs.versions.toml
projects/android/gradle/wrapper/: gradle-wrapper.properties
projects/niku/: Cargo.toml
projects/niku/src/: backend.rs  lib.rs  main.rs  object.rs  peer.rs  receive.rs  run.rs  send.rs  string.rs
projects/niku/src/peer/: file.rs  folder.rs  request.rs
projects/niku_backend/: Cargo.toml  justfile
projects/niku_backend/src/: adjectives.json  errors.rs  extensions.rs  lib.rs  main.rs  nouns.json  router.rs  verbs.json
projects/niku_backend/src/data/: adjectives.json  nouns.json  verbs.json
projects/niku_backend/src/router/: get_objects_id.rs  post_objects_id_keep_alive.rs  put_objects.rs
projects/niku_cli/: Cargo.toml
projects/niku_cli/src/: cli.rs  lib.rs  main.rs
projects/niku_cli/src/cli/: prune.rs  receive.rs  send.rs
projects/niku_core/: Cargo.toml
projects/niku_core/src/: backend.rs  lib.rs  object.rs
projects/uniffi_bindgen/: Cargo.toml
projects/uniffi_bindgen/src/: main.rs
scripts/: backend.bash  backend.sh  check.bash  check.sh  cli.bash  cli.sh  fix.bash  fix.sh  todo.sh
scripts/modules/: _logging.bash  _logging.sh
