[workspace]
resolver = "2"
members = ["projects/*"]

[workspace.dependencies]
axum = "0.8.1"
tokio = { version = "1.44.1", features = ["full"] }
anyhow = "1.0.97"
clap = "4.5.32"
iroh = "0.33.0"
iroh-base = "0.33.0"
iroh-blobs = { version = "0.33.1", features = ["rpc"] }
thiserror = "2.0.12"
log = "0.4.26"
env_logger = "0.11.7"
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.14", features = ["json"] }
rand = "0.9.0"

[workspace.lints.rust]
"missing_docs" = "warn"
