[workspace]
resolver = "2"
members = ["projects/*"]

[workspace.dependencies]
uuid = { version = "1.16.0", features = ["v4"] }
axum = "0.8.1"
tokio = { version = "1.44.1", features = ["full"] }
anyhow = "1.0.97"
clap = "4.5.32"
iroh = "0.33.0"
iroh-base = "0.33.0"
iroh-blobs = { version = "0.33.1", features = ["rpc"] }
thiserror = "2.0.12"
log = "0.4.26"
env_logger = "0.11.7"
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.14", features = ["json"] }
rand = "0.9.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tower-http = { version = "0.6.2", features = ["trace"] }
const_format = "0.2.34"
serde_json = "1.0.140"

[workspace.lints.rust]
"missing_docs" = "warn"

[workspace.lints.clippy]
single_match = "warn"
single_match_else = "warn"
needless_match = "warn"
needless_late_init = "warn"
redundant_pattern_matching = "warn"
redundant_pattern = "warn"
redundant_guards = "warn"
collapsible_match = "warn"
match_single_binding = "warn"
match_same_arms = "warn"
match_ref_pats = "warn"
match_bool = "warn"
needless_bool = "deny"
unwrap_used = "warn"
expect_used = "warn"
