[workspace]
resolver = "2"
members = ["projects/*"]

[workspace.dependencies]
uuid = { version = "1.16.0", features = ["v4"] }
axum = "0.8.1"
tokio = { version = "1.44.1", features = ["full"] }
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
iroh = "0.33.0"
iroh-base = "0.33.0"
iroh-blobs = { version = "0.33.1", features = ["rpc"] }
thiserror = "2.0.12"
log = "0.4.26"
env_logger = "0.11.7"
serde = { version = "1.0.219", features = ["derive"] }
rand = "0.9.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tower-http = { version = "0.6.2", features = ["trace"] }
const_format = "0.2.34"
serde_json = "1.0.140"
zip = "2.2.3"
walkdir = "2.5.0"
text_io = "0.1.13"
dirs = "6.0.0"
term_size = "0.3.2"
utoipa = "5.3.1"
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
console = "0.15.11"
chrono = "0.4.40"
tokio-util = "0.7.14"

[workspace.dependencies.axum-server]
version = "0.7.2"

default-features = false
features = ["tls-rustls"]

[workspace.dependencies.reqwest]
version = "0.12.14"

default-features = false
features = ["rustls-tls", "json"]

[profile.release]
strip = true
lto = true

[workspace.lints.rust]
"missing_docs" = "warn"

[workspace.lints.clippy]
single_match = "warn"
single_match_else = "warn"
needless_match = "warn"
needless_late_init = "warn"
redundant_pattern_matching = "warn"
redundant_pattern = "warn"
redundant_guards = "warn"
collapsible_match = "warn"
match_single_binding = "warn"
match_same_arms = "warn"
match_ref_pats = "warn"
match_bool = "warn"
needless_bool = "deny"
unwrap_used = "warn"
expect_used = "warn"
