[package]
name = "niku"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json.workspace = true
serde.workspace = true
iroh.workspace = true
iroh-blobs.workspace = true
utoipa.workspace = true
reqwest.workspace = true
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true
tokio.workspace = true
chrono.workspace = true
dirs.workspace = true
walkdir.workspace = true
zip.workspace = true

[lints]
workspace = true
