[package]
name = "niku_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
niku_core = { version = "0.1.0", path = "../niku_core" }
axum = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
const_format = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true

[profile.release]
strip = true
lto = true
