[package]
name = "niku_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
niku = { version = "0.0.0", path = "../niku" }
axum.workspace = true
tokio.workspace = true
thiserror.workspace = true
log.workspace = true
rand.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http.workspace = true
const_format.workspace = true
serde_json.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
utoipa-swagger-ui.workspace = true

[lints]
workspace = true
